# aMat

./: .clang-format  CMakeLists.txt  LICENSE  README.md  aMat.hpp  ex8_quad_8p  history.md  ke_matrix.cpp  ke_matrix.hpp  main.cpp  shfunction.cpp  shfunction.hpp
Eigen/: CMakeLists.txt
examples/Gmsh/: CMakeCache.txt
examples/include/: GmshMesh.hpp  ex3.hpp  ex4.hpp  example02a.hpp  example03a.hpp  example04a.hpp  example05a.hpp  example06a.hpp  example07a.hpp  example08a.hpp  example11.hpp  fe_vector.hpp  fem2d.hpp  fem3d.hpp  integration.hpp  ke_matrix.hpp  me_matrix.hpp  shapeFunc.hpp  solve.hpp
examples/src/: GmshMesh.cpp  debug_from_bsam.cpp  ex1.cpp  ex2.cpp  ex3.cpp  ex3a.cpp  ex4.cpp  ex4a.cpp  ex6a.cpp  ex6b.cpp  exTest.cpp  example01a.cpp  example02a.cpp  example03a.cpp  example04a.cpp  example05a.cpp  example06a.cpp  example07a.cpp  example08a.cpp  example11.cpp  fe_vector.cpp  fem1d.cpp  fem2d.cpp  fem3d.cpp  ke_matrix.cpp  matrix_generate.cpp  me_matrix.cpp  profiling_aMat.cpp  read_gmsh.cpp  shfunction.cpp
include/: Vector.hpp  aMat.hpp  aMatBased.hpp  aMatFree.hpp  aMatFree_saved.hpp  aMatGpu.hpp  aMatGpu_1.hpp  aMatGpu_2.hpp  aMatGpu_ompAtomic.hpp  aMatGpu_s.hpp  aVec.hpp  asyncExchangeCtx.hpp  constraintRecord.hpp  enums.hpp  fe_vector.hpp  integration.hpp  ke_matrix.hpp  lapack_extern.hpp  maps.hpp  matRecord.hpp  me_matrix.hpp  meshGraph.hpp  profiler.hpp  shapeFunc.hpp  shfunction.hpp  solve.hpp
src/: ex1.cpp  ex1a.cpp  ex2.cpp  ex3.cpp  ex4.cpp  fe_vector.cpp  fem1d.cpp  fem2d.cpp  fem3d.cpp  ke_matrix.cpp  main.cpp  matfree.cpp  me_matrix.cpp  profiler.cpp  shfunction.cpp
test/include/: aMat.h
test/src/: testEigen.cpp  testMeshGraph.cpp  testMeshGraph2dStructure.cpp
